add ecc math image

--- a/silent-payments-workshop.ipynb
+++ b/silent-payments-workshop.ipynb
@@ -1,11 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "73602732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.bech32m import convertbits, bech32_encode, Encoding\n",
+    "from utils.key import ECKey, ECPubKey, generate_bip340_key_pair\n",
+    "from utils.bip158 import gcs_match_any\n",
+    "\n",
+    "from bip32 import BIP32\n",
+    "from bitcoinrpc.authproxy import AuthServiceProxy, JSONRPCException\n",
+    "\n",
+    "import hashlib\n",
+    "import secp256k1\n",
+    "\n",
+    "def sha256(s):\n",
+    "    return hashlib.new('sha256', s).digest()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ed320771",
    "metadata": {},
    "source": [
     "# Silent Payments\n",
+    "\n",
+    "Using a new address for each Bitcoin transaction is a crucial aspect of maintaining privacy. This often requires a secure interaction between sender and receiver so that the receiver can hand out a fresh address, a batch of fresh address, or a way for the send to generate addresses, such as an xpub.\n",
+    "\n",
+    "However, interaction is often infeasible and in many cases undesirable. To solve for this, various protocols have been proposed which use a static payment address and notifications, sent via the blockchain[footnote]. These protocols eliminate the need for interaction, but at the expense of increased costs for one-time payments and a noticeable footprint in the blockchain, potentially revealing metadata about the sender and receiver. Notification schemes also allow the receiver to link all payments from the same sender, compromising sender privacy.\n",
+    "\n",
+    "This proposal aims to address the limitations of these current approaches by presenting a solution that eliminates the need for interaction, eliminates the need for notifications, and protects both sender and receiver privacy.\n",
+    "\n",
+    "## Goals\n",
     "\n",
     "We aim to present a transaction protocol which satisifies the following properties:\n",
     "\n",
@@ -33,36 +62,96 @@
     "  * Scan for multiple outputs\n",
     "  * Run on signet\n",
     "  \n",
-    "## What this workshop wont cover\n",
+    "## What this workshop won't cover\n",
     "\n",
-    "* Sending to silent payment addresses"
+    "* Sending to silent payment addresses\n",
+    "\n",
+    "# Elliptic Curve math review\n",
+    "\n",
+    "Elliptic Curve math involves scalars and points.\n",
+    "\n",
+    "* A scalar is a positive integer which is smaller than the group order, and is denoted by a lower case letter (eg `a`).\n",
+    "* A point lies on the curve and is denoted by an upper-case letter (eg `C`) or a pair of co-ordinates (eg `(x,y)`).\n",
+    "\n",
+    "In Bitcoin, key pair generation and signing is performed over the secp256k1 curve. All scalars are modulo the group order `SECP256K1_ORDER`, which is a very large number"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a687eafc",
+   "metadata": {},
+   "source": [
+    "![test](images/ec_math0.jpg)\n",
+    "\n",
+    "_An overview of all operations of scalars and points over elliptic curves._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9cf5760",
+   "metadata": {},
+   "source": [
+    "## Simple case\n",
+    "\n",
+    "Alice publishes a public key *A* as her silent payment address. Bob selects an input *B,b* and tweaks Alice's public key to create a destination public key *D* in the following way: \n",
+    "\n",
+    "* Let *D = HASH(b·A)·G + A* \n",
+    "\n",
+    "Bob constructs a transaction in the normal way with *B* as an input and *D* as the destination address. Alice detects this payment by computing:\n",
+    "\n",
+    "* Let *D = HASH(a·B)·G + A* (Diffie-Hellman Key Exchange).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0f968ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b, B = generate_bip340_key_pair()\n",
+    "a, A = generate_bip340_key_pair()\n",
+    "\n",
+    "# Bob generates the output using his private key b and Alice's public key\n",
+    "# sha256(a * B) * G + A\n",
+    "t = sha256((b * A).get_bytes())\n",
+    "T = ECKey().set(t).get_pubkey()\n",
+    "D = T + A\n",
+    "\n",
+    "# Alice checks if D is hers using her private key and Bob's public key\n",
+    "t_prime = sha256((a * B).get_bytes())\n",
+    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
+    "D_prime = T_prime + A\n",
+    "\n",
+    "assert D == D_prime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84a5a560",
+   "metadata": {},
+   "source": [
+    "## Preventing address reuse\n",
+    "\n",
+    "If Bob were to use a different UTXO from the same public key *B* for a subseqent payment, he would end up deriving the same destination for Alice. To prevent this, Bob must include a hash of the outpoint in the following manner:\n",
+    "\n",
+    "* Let *outpoint_hash = HASH(txid \\|\\| vout)* \n",
+    "* Let *D~0~ = HASH(outpoint_hash·b·A)·G + A*\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfec7274",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "bcbbffaa",
+   "id": "caa0464b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.bech32m import convertbits, bech32_encode, Encoding\n",
-    "from utils.key import ECKey, ECPubKey\n",
-    "from utils.bip158 import gcs_match_any\n",
+    "# calculate the outpoint hash\n",
     "\n",
-    "from bitcoinrpc.authproxy import AuthServiceProxy, JSONRPCException\n",
-    "import hashlib\n",
-    "import secp256k1\n",
+    "txid = \"\"\n",
+    "vout = \"\"\n",
     "\n",
-    "def sha256(s):\n",
-    "    return hashlib.new('sha256', s).digest()"
+    "# D = sha256(outpoint_hash * b * A) * G + A"
    ]
   },
   {
@@ -72,7 +161,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bip32 import BIP32\n",
     "\n",
     "class SPWallet:\n",
     "    \n",
