update readme , add notebook

--- a/silent-payments-workshop.ipynb
+++ b/silent-payments-workshop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "73602732",
    "metadata": {},
    "outputs": [],
@@ -15,9 +15,9 @@
     "from bitcoinrpc.authproxy import AuthServiceProxy, JSONRPCException\n",
     "\n",
     "import hashlib\n",
-    "import secp256k1\n",
-    "\n",
     "def sha256(s):\n",
+    "    if type(s) != bytes:\n",
+    "        s = s.get_bytes()\n",
     "    return hashlib.new('sha256', s).digest()"
    ]
   },
@@ -99,12 +99,12 @@
     "\n",
     "Bob constructs a transaction in the normal way with *B* as an input and *D* as the destination address. Alice detects this payment by computing:\n",
     "\n",
-    "* Let *D = HASH(a·B)·G + A* (Diffie-Hellman Key Exchange).\n"
+    "* Let *D = HASH(a·B)·G + A* (Diffie-Hellman Key Exchange)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0f968ce2",
    "metadata": {},
    "outputs": [],
@@ -113,17 +113,44 @@
     "a, A = generate_bip340_key_pair()\n",
     "\n",
     "# Bob generates the output using his private key b and Alice's public key\n",
-    "# sha256(a * B) * G + A\n",
-    "t = sha256((b * A).get_bytes())\n",
-    "T = ECKey().set(t).get_pubkey()\n",
-    "D = T + A\n",
+    "# sha256(a * B)\n",
+    "t = \n",
+    "\n",
+    "# create a pubkey: T = t * G\n",
+    "T = \n",
+    "\n",
+    "# create the silent payment output: D = T + A\n",
+    "D = \n",
     "\n",
     "# Alice checks if D is hers using her private key and Bob's public key\n",
-    "t_prime = sha256((a * B).get_bytes())\n",
-    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
-    "D_prime = T_prime + A\n",
+    "t_prime = \n",
+    "T_prime = \n",
+    "D_prime = \n",
     "\n",
     "assert D == D_prime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4f9012d",
+   "metadata": {},
+   "source": [
+    "### Sending to more than one output\n",
+    "\n",
+    "For additional privacy, Bob can derive multiple outputs for Alice in the following manner:\n",
+    "\n",
+    "* Let *D<sub>0</sub> = HASH(b·A \\|\\| 0)·G + A*\n",
+    "    * This is defined as the *0-tweaked address*\n",
+    "* For additional outputs:\n",
+    "    * Let *D<sub>i</sub> = HASH(b·A \\|\\| n)·G + A*, where *n* starts from 1 and is incremented for each subsequent output\n",
+    "\n",
+    "Alice detects this output the same as before by searching for *D<sub>0</sub> = HASH(a·B \\|\\| 0)·G + A*. Once she detects the *0-tweaked address*, she must:\n",
+    "\n",
+    "* Check for *D<sub>1</sub> = HASH(B·a \\|\\| 1)·G + A*\n",
+    "    * If *D<sub>1</sub>* is not found, she  is done\n",
+    "* If *D<sub>1</sub>* is found, she continues to check for *D<sub>2</sub>* and so on until an output is not found\n",
+    "\n",
+    "Since Alice will only perform these subsquent checks after a transaction with a *0-tweaked address* paying her is found, the increase to her overall scanning requirement is negligible."
    ]
   },
   {
@@ -136,7 +163,7 @@
     "If Bob were to use a different UTXO from the same public key *B* for a subseqent payment, he would end up deriving the same destination for Alice. To prevent this, Bob must include a hash of the outpoint in the following manner:\n",
     "\n",
     "* Let *outpoint_hash = HASH(txid \\|\\| vout)* \n",
-    "* Let *D~0~ = HASH(outpoint_hash·b·A)·G + A*\n"
+    "* Let *D<sub>0</sub> = HASH(outpoint_hash·b·A)·G + A*\n"
    ]
   },
   {
@@ -148,28 +175,237 @@
    "source": [
     "# calculate the outpoint hash\n",
     "\n",
-    "txid = \"\"\n",
-    "vout = \"\"\n",
+    "txid = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
+    "vout = (0).to_bytes(4, 'little')\n",
     "\n",
-    "# D = sha256(outpoint_hash * b * A) * G + A"
+    "# sha256(txid || vout)\n",
+    "outpoint_hash = \n",
+    "\n",
+    "t = \n",
+    "T = \n",
+    "D = \n",
+    "\n",
+    "# Alice scans..\n",
+    "\n",
+    "t_prime = \n",
+    "T_prime = \n",
+    "D_prime = \n",
+    "\n",
+    "assert D == D_prime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bc72ad7",
+   "metadata": {},
+   "source": [
+    "### Using all inputs\n",
+    "\n",
+    "In our simplified example we have been referring to Bob's transactions as having only one input *B*, but in reality a Bitcoin transaction can have many inputs. This complicates our protocol by forcing Bob to choose a particular input and requires Alice to check each input for each transaction. \n",
+    "\n",
+    "We can simplify things by requiring Bob to tweak Alice's public key *A* with the sum of his input private keys:\n",
+    "\n",
+    "* Let *outpoints_hash = HASH(txid<sub>1</sub> \\|\\| vout<sub>1</sub> \\|\\| .. txid<sub>n</sub> \\|\\| vout<sub>n</sub>)*\n",
+    "* Let *inputs<sub>priv</sub> = i<sub>1</sub> + i<sub>2</sub> .. + i<sub>n</sub>*\n",
+    "* Let *D<sub>0</sub> = HASH(outpoints_hash·inputs<sub>priv</sub>·A)·G + A*\n",
+    "\n",
+    "Alice now only needs to compute one tweak per transaction with the sum of the inputs, instead of computing a tweak per input."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "92271084",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# doesn't have to be a taproot UTXO\n",
+    "txid1 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
+    "vout1 = (0).to_bytes(4, 'little')\n",
+    "\n",
+    "b1 = ECKey().generate()\n",
+    "B1 = b1.get_pubkey()\n",
+    "\n",
+    "# taproot UTXO\n",
+    "txid2 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
+    "vout2 = (0).to_bytes(4, 'little')\n",
+    "\n",
+    "b2, B2 = generate_bip340_key_pair()\n",
+    "\n",
+    "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
+    "\n",
+    "# sha256(outputpoint_hash * Sum of Bob's input privkeys * A)\n",
+    "t = \n",
+    "T = ECKey().set(t).get_pubkey()\n",
+    "D = T + A\n",
+    "\n",
+    "# alice\n",
+    "t_prime = \n",
+    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
+    "D_prime = T_prime + A\n",
+    "\n",
+    "assert D_prime == D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace390b4",
+   "metadata": {},
+   "source": [
+    "### Spend and Scan Key\n",
+    "\n",
+    "Since Alice needs *a* to check for incoming payments, this requires her private key to be unencrypted in an online device. To mitigate this, Alice can instead publish an address of the form *(A<sub>spend</sub>, A<sub>scan</sub>)* where both are BIP340 public keys and Alice controls both private keys *a<sub>spend</sub>,a<sub>scan</sub>*.\n",
+    "\n",
+    "This allows Alice to keep *a<sub>spend</sub>* in offline cold storage and perform the scanning with the public key *A<sub>spend</sub>* and private key *a<sub>scan</sub>*. \n",
+    "\n",
+    "Bob performs the tweak using both of Alice's public keys in the following manner:\n",
+    "\n",
+    "* Let *D<sub>0</sub> = HASH(outpoints_hash·inputs<sub>priv</sub>·A<sub>scan</sub>)·G + A<sub>spend</sub>*\n",
+    "\n",
+    "Alice detects this payment by calculating:\n",
+    "\n",
+    "* *D<sub>0</sub> = HASH(outpoints_hash·inputs<sub>pub</sub>·a<sub>scan</sub>)·G + A<sub>spend</sub>*\n",
+    "* Spendable with *a<sub>spend</sub> + HASH(outpoints_hash·inputs<sub>pub</sub>·a<sub>scan</sub>) mod P* as the private key.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eefd4f42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_scan, A_scan = generate_bip340_key_pair()\n",
+    "a_spend, A_spend = generate_bip340_key_pair()\n",
+    "\n",
+    "# doesn't have to be a taproot UTXO\n",
+    "txid1 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
+    "vout1 = (0).to_bytes(4, 'little')\n",
+    "\n",
+    "b1 = ECKey().generate()\n",
+    "B1 = b1.get_pubkey()\n",
+    "\n",
+    "# taproot UTXO\n",
+    "txid2 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
+    "vout2 = (0).to_bytes(4, 'little')\n",
+    "\n",
+    "b2, B2 = generate_bip340_key_pair()\n",
+    "\n",
+    "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
+    "\n",
+    "# sha256(outpoint_hash * sum of bob's privkeys * Alice's scan public key)\n",
+    "t = \n",
+    "T = ECKey().set(t).get_pubkey()\n",
+    "# add to Alice's spend public key\n",
+    "D = \n",
+    "\n",
+    "# alice\n",
+    "t_prime = \n",
+    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
+    "D_prime = \n",
+    "\n",
+    "assert D_prime == D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "728998a0",
+   "metadata": {},
+   "source": [
+    "### Labels\n",
+    "\n",
+    "For a single silent payment address of the form *(A<sub>spend</sub>,A<sub>scan</sub>)*, Alice may wish to differintiate incoming payments by using labels. Naively, Alice could publish multiple silent payment addresses, but this would require her to scan for each silent address, which becomes prohibitively expense.\n",
+    "\n",
+    "Instead, Alice can tweak the spend public key *A<sub>spend</sub>* with an integer *m* in the following way:\n",
+    "\n",
+    "* Let *A<sub>m</sub> = A<sub>spend</sub> + m·G*\n",
+    "* Publish *(A<sub>0</sub>, A<sub>scan</sub>)*, *(A<sub>1</sub>, A<sub>scan</sub>)*\n",
+    "\n",
+    "Bob performs the tweak same as before using one of the published *(A<sub>m</sub>,A<sub>scan</sub>)* pairs. Alice detects the labeled payment in the following manner:\n",
+    "\n",
+    "* Let *D = HASH(outpoints_hash·inputs<sub>pub</sub>·a<sub>scan</sub>)·G + A<sub>spend</sub>*\n",
+    "* Compute *D<sub>m</sub> = D + m·G* for each *m*\n",
+    "* For each *D<sub>m</sub>* in {*D<sub>0</sub> .. D<sub>m</sub>*}, check if they are present in the transaction outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aeddbcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_scan, A_scan = generate_bip340_key_pair()\n",
+    "a_spend, A_spend = generate_bip340_key_pair()\n",
+    "\n",
+    "# create some labels\n",
+    "labels = {\n",
+    "    'twitter': A_spend + ,\n",
+    "    'github': A_spend + ,\n",
+    "    'project a': A_spend + ,\n",
+    "    'project b': A_spend + ,\n",
+    "}\n",
+    "\n",
+    "# doesn't have to be a taproot UTXO\n",
+    "txid1 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
+    "vout1 = (0).to_bytes(4, 'little')\n",
+    "\n",
+    "b1 = ECKey().generate()\n",
+    "B1 = b1.get_pubkey()\n",
+    "\n",
+    "# taproot UTXO\n",
+    "txid2 = b'f4184fc596403b9d638783cf57adfe4c75c605f6356fbc91338530e9831e9e16'\n",
+    "vout2 = (0).to_bytes(4, 'little')\n",
+    "\n",
+    "b2, B2 = generate_bip340_key_pair()\n",
+    "\n",
+    "# Bob finds Alice's silent payment address through github and makes a payment\n",
+    "A_2 = labels['github']\n",
+    "\n",
+    "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
+    "t = sha256(outpoint_hash * (b1 + b2) * A_scan)\n",
+    "T = ECKey().set(t).get_pubkey()\n",
+    "D = \n",
+    "\n",
+    "# alice\n",
+    "t_prime = sha256(outpoint_hash * a_scan * (B1 + B2))\n",
+    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
+    "\n",
+    "D_prime = None\n",
+    "for k,V in labels.items():\n",
+    "    \n",
+    "        \n",
+    "assert D_prime == D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c947ef0",
+   "metadata": {},
+   "source": [
+    "## Putting it all together\n",
+    "\n",
+    "### Simple wallet: generating silent payment keys\n",
+    "\n",
+    "* Use BIP32 hardened derivation for the silent payment keys\n",
+    "* Generate a silent payment address\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c0df3157",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class SPWallet:\n",
     "    \n",
     "    REASON = \"1337\"\n",
     "\n",
     "    def __init__(self, seed):\n",
     "        self.master = BIP32.from_seed(bytes.fromhex(seed))\n",
-    "        self.spend_path = f\"m/{self.REASON}'/0'/0'\"\n",
-    "        self.scan_path = f\"m/{self.REASON}'/1'/0'\"\n",
+    "        self.spend_path = \n",
+    "        self.scan_path = \n",
     "        self.scan_privkey, self.scan_pubkey = self.convert_to_bip340_key_pair(\n",
     "            self.get_scan_privkey()\n",
     "        )\n",
@@ -180,7 +416,7 @@
     "    def convert_to_bip340_key_pair(self, seckey):\n",
     "        d = ECKey().set(seckey)\n",
     "        P = d.get_pubkey()\n",
-    "        if P.get_y()%2 != 0:\n",
+    "        if P.get_y() % 2 != 0:\n",
     "            d.negate()\n",
     "            P.negate()\n",
     "        return d, P\n",
@@ -198,14 +434,27 @@
     "        return self.master.get_privkey_from_path(self.spend_path)\n",
     "    \n",
     "    def get_silent_payment_address(self):\n",
-    "        pubkeys = self.scan_pubkey.get_bytes() + self.spend_pubkey.get_bytes()\n",
+    "        pubkeys = \n",
+    "        \n",
     "        data = convertbits(pubkeys, 8, 5)\n",
     "        return bech32_encode(\"sprt\", data, Encoding.BECH32M)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae846d8f",
+   "metadata": {},
+   "source": [
+    "### Scanning:  BIP158 block filters\n",
+    "\n",
+    "* Get the tweak data per transaction (using `getsilentpaymentblockdata` rpc)\n",
+    "* Do the ECDH tweaks\n",
+    "* Check if any outputs exist in a block using BIP158 block filters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8e1b9001",
    "metadata": {},
    "outputs": [],
@@ -223,6 +472,15 @@
     "        self.last_block_scanned = self.start_from_height - 1\n",
     "        self.rpc = rpc_client\n",
     "        \n",
+    "    def sha256_secp256k1_ecdh(self, x32, y32):\n",
+    "        \n",
+    "        version = (y32[31] & 0x01) | 0x02\n",
+    "        sha = hashlib.sha256()\n",
+    "        sha.update(bytes([version]))\n",
+    "        sha.update(bytes(x32))\n",
+    "        \n",
+    "        return sha.digest()\n",
+    "        \n",
     "    def refresh(self, rpc_client):\n",
     "        self.rpc = rpc_client\n",
     "        \n",
@@ -235,13 +493,22 @@
     "        stop = self.rpc.getblockchaininfo()['blocks']\n",
     "        current_block = self.start_from_height\n",
     "        while current_block <= stop:\n",
-    "            res = self.get_silent_payment_block_data(current_block)\n",
+    "            \n",
+    "            # get the silent payment tweak data\n",
+    "            res = \n",
     "            if res['total_tx'] == 0:\n",
+    "                # if there are no silent payment \"eligible\" txs, move on\n",
     "                current_block += 1\n",
     "                continue\n",
     "            \n",
-    "            tweak_data = self.parse_silent_payment_block_data(res)\n",
-    "            outputs_to_check = self.compute_outputs(tweak_data)\n",
+    "            # get the tweak data \n",
+    "            tweak_data = \n",
+    "            \n",
+    "            # compute the tweaks\n",
+    "            outputs_to_check = \n",
+    "            \n",
+    "            # check if any of the outputs exist in the block\n",
+    "            # if they do, they necessarily belong to us\n",
     "            self.is_mine(outputs_to_check, res['block_hash'])\n",
     "            current_block += 1\n",
     "            \n",
@@ -250,8 +517,13 @@
     "        \n",
     "    def get_silent_payment_block_data(self, height):\n",
     "            \n",
-    "        block_hash = self.rpc.getblockhash(height)\n",
-    "        data = self.rpc.getsilentpaymentblockdata(block_hash)\n",
+    "        # get the block hash for a given height\n",
+    "        block_hash = \n",
+    "        \n",
+    "        # get the silent payment block data\n",
+    "        data = \n",
+    "        \n",
+    "        # add the block hash to the response (saves an rpc call later)\n",
     "        data['block_hash'] = block_hash\n",
     "        return data\n",
     "        \n",
@@ -259,8 +531,8 @@
     "        total_txs = data['total_tx']\n",
     "        tx_data = data['data']\n",
     "        txs = [\n",
-    "            tx_data[i:i + (self.PUBKEY_BYTES + self.TRUNC_HASH_BYTES)*2]\n",
-    "            for i in range(0, len(tx_data), (self.PUBKEY_BYTES + self.TRUNC_HASH_BYTES)*2)\n",
+    "            tx_data[i:i + ?]\n",
+    "            for i in range(0, len(tx_data), ?\n",
     "        ]\n",
     "        tweaks = [\n",
     "            (tx[:self.PUBKEY_BYTES*2], tx[self.PUBKEY_BYTES*2:]) for tx in txs\n",
@@ -271,21 +543,26 @@
     "    def compute_outputs(self, txs):\n",
     "        potential_outputs = []\n",
     "        for (sum_pubkeys, trunc_hash) in txs:\n",
-    "            # compute the outpoint hash tweak\n",
-    "            outpoint_hash = sha256(bytes.fromhex(trunc_hash))\n",
+    "            # convert the hex pubkey into an ECPubKey\n",
+    "            I = \n",
     "            \n",
-    "            # scalar multiplication with scan_privkey\n",
-    "            scalar_tweak = outpoint_hash * self.scan_privkey\n",
+    "            # hash the truncated hash\n",
+    "            outpoint_hash = \n",
     "            \n",
-    "            # tweaked pubkey - expensive EC Multiplication\n",
-    "            # this needs to be x-only\n",
-    "            secp256k1_pubkey = secp256k1.PublicKey(bytes.fromhex(sum_pubkeys), raw=True)\n",
-    "            shared_secret = secp256k1_pubkey.ecdh(scalar_tweak.get_bytes())\n",
-    "            # shared_secret_hash = sha256(shared_secret)\n",
-    "            pubkey = ECKey().set(shared_secret).get_pubkey() + self.spend_pubkey\n",
+    "            # compute the tweak\n",
+    "            ecdh = \n",
     "            \n",
-    "            # create a taproot scriptPubKey\n",
-    "            spk = self.WITNESS_VERSION_1 + pubkey.get_bytes().hex()\n",
+    "            # SHA256(outpoint_hash * a * B) - use the special hash function which implements secp256k1 ecdh\n",
+    "            shared_secret = self.sha256_secp256k1_ecdh(\n",
+    "                ecdh.get_x().to_bytes(32, 'big'),\n",
+    "                ecdh.get_y().to_bytes(32, 'big'),\n",
+    "            )\n",
+    "            \n",
+    "            # t * G + A\n",
+    "            pubkey = \n",
+    "            \n",
+    "            # create a taproot scriptPubKey: 1 <pubkey>\n",
+    "            spk = \n",
     "            potential_outputs.append(spk)\n",
     "            \n",
     "        return potential_outputs\n",
@@ -309,29 +586,20 @@
     "                        print(f\"{tx['txid']} is mine!\")\n",
     "        \n",
     "def rpc_client():\n",
-    "    return AuthServiceProxy(\"http://%s:%s@127.0.0.1:18443\"%(\"test\", \"test\"))\n",
+    "    return AuthServiceProxy(\"http://%s:%s@127.0.0.1:18443\"%(\"silent\", \"payments\"))\n",
     "\n",
     "wallet = SPWallet(sha256(b'stuff n fluff').hex())\n",
-    "scanner = SPScanner(wallet.spend_pubkey, wallet.scan_privkey, rpc_client(), 315)"
+    "wallet.get_silent_payment_address()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "65ec106f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f59fe48b899ee2448ff45761f268ef5ae2d461974d987cc12534b69f03c9f468 is mine!\n",
-      "done scanning\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "wallet.get_silent_payment_address()\n",
+    "scanner = SPScanner(wallet.spend_pubkey, wallet.scan_privkey, rpc_client(), 315)\n",
     "scanner.scan()"
    ]
   }
