--- a/silent-payments-workshop-solutions.ipynb
+++ b/silent-payments-workshop-solutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "73602732",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "0f968ce2",
    "metadata": {},
    "outputs": [],
@@ -113,13 +113,9 @@
     "a, A = generate_bip340_key_pair()\n",
     "\n",
     "# Bob generates the output using his private key b and Alice's public key\n",
-    "# sha256(b * A)\n",
+    "# sha256(a * B)\n",
     "t = sha256(b * A)\n",
-    "\n",
-    "# create a pubkey: T = t * G\n",
     "T = ECKey().set(t).get_pubkey()\n",
-    "\n",
-    "# create the silent payment output: D = T + A\n",
     "D = T + A\n",
     "\n",
     "# Alice checks if D is hers using her private key and Bob's public key\n",
@@ -168,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "caa0464b",
    "metadata": {},
    "outputs": [],
@@ -214,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "92271084",
    "metadata": {},
    "outputs": [],
@@ -233,8 +229,6 @@
     "b2, B2 = generate_bip340_key_pair()\n",
     "\n",
     "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
-    "\n",
-    "# sha256(outputpoint_hash * Sum of Bob's input privkeys * A)\n",
     "t = sha256(outpoint_hash * (b1 + b2) * A)\n",
     "T = ECKey().set(t).get_pubkey()\n",
     "D = T + A\n",
@@ -270,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "eefd4f42",
    "metadata": {},
    "outputs": [],
@@ -292,15 +286,12 @@
     "b2, B2 = generate_bip340_key_pair()\n",
     "\n",
     "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
-    "\n",
-    "# sha256(outpoint_hash * sum of bob's privkeys * Alice's scan public key)\n",
     "t = sha256(outpoint_hash * (b1 + b2) * A_scan)\n",
     "T = ECKey().set(t).get_pubkey()\n",
-    "# add to Alice's spend public key\n",
     "D = T + A_spend\n",
     "\n",
     "# alice\n",
-    "t_prime = sha256(outpoint_hash * (B1 + B2) * a_scan) \n",
+    "t_prime = sha256(outpoint_hash * a_scan * (B1 + B2))\n",
     "T_prime = ECKey().set(t_prime).get_pubkey()\n",
     "D_prime = T_prime + A_spend\n",
     "\n",
@@ -325,12 +316,12 @@
     "\n",
     "* Let *D = HASH(outpoints_hash·inputs<sub>pub</sub>·a<sub>scan</sub>)·G + A<sub>spend</sub>*\n",
     "* Compute *D<sub>m</sub> = D + m·G* for each *m*\n",
-    "* For each *D<sub>m</sub>* in {*D<sub>0</sub> .. D<sub>m</sub>*}, check if they are present in the transaction outputs"
+    "* For each *D<sub>m</sub>* in {*D<sub>0</sub> .. D<sub>m</sub>*}, check if they are present in the transaction outputs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "7aeddbcb",
    "metadata": {},
    "outputs": [
@@ -384,14 +375,13 @@
     "    if T_prime + V == D:\n",
     "        print(f\"Found payment to label {k}\")\n",
     "        D_prime = T_prime + V\n",
-    "    \n",
     "        \n",
     "assert D_prime == D"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c947ef0",
+   "id": "94027be0",
    "metadata": {},
    "source": [
     "## Putting it all together\n",
@@ -404,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "c0df3157",
    "metadata": {},
    "outputs": [],
@@ -446,14 +436,13 @@
     "    \n",
     "    def get_silent_payment_address(self):\n",
     "        pubkeys = self.scan_pubkey.get_bytes() + self.spend_pubkey.get_bytes()\n",
-    "        \n",
     "        data = convertbits(pubkeys, 8, 5)\n",
     "        return bech32_encode(\"sprt\", data, Encoding.BECH32M)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ae846d8f",
+   "id": "94220bd4",
    "metadata": {},
    "source": [
     "### Scanning:  BIP158 block filters\n",
@@ -465,10 +454,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8e1b9001",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sprt140xy8d8ys6t67tx8swea0dhhs0shjlzlrw6r6cdhteccessszd79hu2vw6xw8dnz9x54f4lfd92c2gflfrmzwa023l6ufu9y84hkg9cyxcejf'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class SPScanner:\n",
     "    PUBKEY_BYTES = 33\n",
@@ -504,22 +504,13 @@
     "        stop = self.rpc.getblockchaininfo()['blocks']\n",
     "        current_block = self.start_from_height\n",
     "        while current_block <= stop:\n",
-    "            \n",
-    "            # get the silent payment tweak data\n",
-    "            res = \n",
+    "            res = self.get_silent_payment_block_data(current_block)\n",
     "            if res['total_tx'] == 0:\n",
-    "                # if there are no silent payment \"eligible\" txs, move on\n",
     "                current_block += 1\n",
     "                continue\n",
     "            \n",
-    "            # get the tweak data \n",
-    "            tweak_data = \n",
-    "            \n",
-    "            # compute the tweaks\n",
-    "            outputs_to_check = \n",
-    "            \n",
-    "            # check if any of the outputs exist in the block\n",
-    "            # if they do, they necessarily belong to us\n",
+    "            tweak_data = self.parse_silent_payment_block_data(res)\n",
+    "            outputs_to_check = self.compute_outputs(tweak_data)\n",
     "            self.is_mine(outputs_to_check, res['block_hash'])\n",
     "            current_block += 1\n",
     "            \n",
@@ -528,13 +519,8 @@
     "        \n",
     "    def get_silent_payment_block_data(self, height):\n",
     "            \n",
-    "        # get the block hash for a given height\n",
-    "        block_hash = \n",
-    "        \n",
-    "        # get the silent payment block data\n",
-    "        data = \n",
-    "        \n",
-    "        # add the block hash to the response (saves an rpc call later)\n",
+    "        block_hash = self.rpc.getblockhash(height)\n",
+    "        data = self.rpc.getsilentpaymentblockdata(block_hash)\n",
     "        data['block_hash'] = block_hash\n",
     "        return data\n",
     "        \n",
@@ -542,8 +528,8 @@
     "        total_txs = data['total_tx']\n",
     "        tx_data = data['data']\n",
     "        txs = [\n",
-    "            tx_data[i:i + ?]\n",
-    "            for i in range(0, len(tx_data), ?\n",
+    "            tx_data[i:i + (self.PUBKEY_BYTES + self.TRUNC_HASH_BYTES)*2]\n",
+    "            for i in range(0, len(tx_data), (self.PUBKEY_BYTES + self.TRUNC_HASH_BYTES)*2)\n",
     "        ]\n",
     "        tweaks = [\n",
     "            (tx[:self.PUBKEY_BYTES*2], tx[self.PUBKEY_BYTES*2:]) for tx in txs\n",
@@ -554,26 +540,24 @@
     "    def compute_outputs(self, txs):\n",
     "        potential_outputs = []\n",
     "        for (sum_pubkeys, trunc_hash) in txs:\n",
-    "            # convert the hex pubkey into an ECPubKey\n",
-    "            I = \n",
+    "            # compute the outpoint hash tweak\n",
+    "            I = ECPubKey().set(bytes.fromhex(sum_pubkeys))\n",
+    "            outpoint_hash = sha256(bytes.fromhex(trunc_hash))\n",
     "            \n",
-    "            # hash the truncated hash\n",
-    "            outpoint_hash = \n",
+    "            # ECDH\n",
+    "            ecdh = outpoint_hash * self.scan_privkey * I\n",
     "            \n",
-    "            # compute the tweak\n",
-    "            ecdh = \n",
-    "            \n",
-    "            # SHA256(outpoint_hash * a * B) - use the special hash function which implements secp256k1 ecdh\n",
+    "            # SHA256(outpoint_hash * a * B)\n",
     "            shared_secret = self.sha256_secp256k1_ecdh(\n",
     "                ecdh.get_x().to_bytes(32, 'big'),\n",
     "                ecdh.get_y().to_bytes(32, 'big'),\n",
     "            )\n",
     "            \n",
-    "            # t * G + A\n",
-    "            pubkey = \n",
+    "            # shared_secret_hash = sha256(shared_secret)\n",
+    "            pubkey = ECKey().set(shared_secret).get_pubkey() + self.spend_pubkey\n",
     "            \n",
-    "            # create a taproot scriptPubKey: 1 <pubkey>\n",
-    "            spk = \n",
+    "            # create a taproot scriptPubKey\n",
+    "            spk = self.WITNESS_VERSION_1 + pubkey.get_bytes().hex()\n",
     "            potential_outputs.append(spk)\n",
     "            \n",
     "        return potential_outputs\n",
@@ -605,14 +589,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "65ec106f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f59fe48b899ee2448ff45761f268ef5ae2d461974d987cc12534b69f03c9f468 is mine!\n",
+      "9c064ece8a98bbdf4abbd30110a968940e617aca2fc0cb1d91e8aa3b3e70a596 is mine!\n",
+      "97f02878e92a87d96d1cdfea8105a93da39d3a9e2be88c68608e165e87baf9ad is mine!\n",
+      "de649cbee72051f57c768aeefe703af0ea91e197fb801651d8fccc49f60091d1 is mine!\n",
+      "46f5f22a83526709f9d93abbde1e4e941ccc6d442a96ee47493fc9da9e9a8ded is mine!\n",
+      "done scanning\n"
+     ]
+    }
+   ],
    "source": [
     "scanner = SPScanner(wallet.spend_pubkey, wallet.scan_privkey, rpc_client(), 315)\n",
     "scanner.scan()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "676c9861",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
