--- a/silent-payments-workshop.ipynb
+++ b/silent-payments-workshop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "73602732",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0f968ce2",
    "metadata": {},
    "outputs": [],
@@ -113,19 +113,19 @@
     "a, A = generate_bip340_key_pair()\n",
     "\n",
     "# Bob generates the output using his private key b and Alice's public key\n",
-    "# sha256(b * A)\n",
-    "t = sha256(b * A)\n",
+    "# sha256(a * B)\n",
+    "t = \n",
     "\n",
     "# create a pubkey: T = t * G\n",
-    "T = ECKey().set(t).get_pubkey()\n",
+    "T = \n",
     "\n",
     "# create the silent payment output: D = T + A\n",
-    "D = T + A\n",
+    "D = \n",
     "\n",
     "# Alice checks if D is hers using her private key and Bob's public key\n",
-    "t_prime = sha256(a * B)\n",
-    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
-    "D_prime = T_prime + A\n",
+    "t_prime = \n",
+    "T_prime = \n",
+    "D_prime = \n",
     "\n",
     "assert D == D_prime"
    ]
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "caa0464b",
    "metadata": {},
    "outputs": [],
@@ -179,17 +179,17 @@
     "vout = (0).to_bytes(4, 'little')\n",
     "\n",
     "# sha256(txid || vout)\n",
-    "outpoint_hash = sha256(txid + vout)\n",
+    "outpoint_hash = \n",
     "\n",
-    "t = sha256(outpoint_hash * b * A)\n",
-    "T = ECKey().set(t).get_pubkey()\n",
-    "D = T + A\n",
+    "t = \n",
+    "T = \n",
+    "D = \n",
     "\n",
     "# Alice scans..\n",
     "\n",
-    "t_prime = sha256(outpoint_hash * a * B)\n",
-    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
-    "D_prime = T_prime + A\n",
+    "t_prime = \n",
+    "T_prime = \n",
+    "D_prime = \n",
     "\n",
     "assert D == D_prime"
    ]
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "92271084",
    "metadata": {},
    "outputs": [],
@@ -235,12 +235,12 @@
     "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
     "\n",
     "# sha256(outputpoint_hash * Sum of Bob's input privkeys * A)\n",
-    "t = sha256(outpoint_hash * (b1 + b2) * A)\n",
+    "t = \n",
     "T = ECKey().set(t).get_pubkey()\n",
     "D = T + A\n",
     "\n",
     "# alice\n",
-    "t_prime = sha256(outpoint_hash * a * (B1 + B2))\n",
+    "t_prime = \n",
     "T_prime = ECKey().set(t_prime).get_pubkey()\n",
     "D_prime = T_prime + A\n",
     "\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "eefd4f42",
    "metadata": {},
    "outputs": [],
@@ -294,15 +294,15 @@
     "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
     "\n",
     "# sha256(outpoint_hash * sum of bob's privkeys * Alice's scan public key)\n",
-    "t = sha256(outpoint_hash * (b1 + b2) * A_scan)\n",
+    "t = \n",
     "T = ECKey().set(t).get_pubkey()\n",
     "# add to Alice's spend public key\n",
-    "D = T + A_spend\n",
+    "D = \n",
     "\n",
     "# alice\n",
-    "t_prime = sha256(outpoint_hash * (B1 + B2) * a_scan) \n",
+    "t_prime = \n",
     "T_prime = ECKey().set(t_prime).get_pubkey()\n",
-    "D_prime = T_prime + A_spend\n",
+    "D_prime = \n",
     "\n",
     "assert D_prime == D"
    ]
@@ -330,28 +330,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7aeddbcb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found payment to label github\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a_scan, A_scan = generate_bip340_key_pair()\n",
     "a_spend, A_spend = generate_bip340_key_pair()\n",
     "\n",
     "# create some labels\n",
     "labels = {\n",
-    "    'twitter': A_spend + ECKey().set(1).get_pubkey(),\n",
-    "    'github': A_spend + ECKey().set(2).get_pubkey(),\n",
-    "    'project a': A_spend + ECKey().set(3).get_pubkey(),\n",
-    "    'project b': A_spend + ECKey().set(4).get_pubkey(),\n",
+    "    'twitter': A_spend + ,\n",
+    "    'github': A_spend + ,\n",
+    "    'project a': A_spend + ,\n",
+    "    'project b': A_spend + ,\n",
     "}\n",
     "\n",
     "# doesn't have to be a taproot UTXO\n",
@@ -373,7 +365,7 @@
     "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
     "t = sha256(outpoint_hash * (b1 + b2) * A_scan)\n",
     "T = ECKey().set(t).get_pubkey()\n",
-    "D = T + A_2\n",
+    "D = \n",
     "\n",
     "# alice\n",
     "t_prime = sha256(outpoint_hash * a_scan * (B1 + B2))\n",
@@ -381,9 +373,6 @@
     "\n",
     "D_prime = None\n",
     "for k,V in labels.items():\n",
-    "    if T_prime + V == D:\n",
-    "        print(f\"Found payment to label {k}\")\n",
-    "        D_prime = T_prime + V\n",
     "    \n",
     "        \n",
     "assert D_prime == D"
@@ -404,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "c0df3157",
    "metadata": {},
    "outputs": [],
@@ -415,8 +404,8 @@
     "\n",
     "    def __init__(self, seed):\n",
     "        self.master = BIP32.from_seed(bytes.fromhex(seed))\n",
-    "        self.spend_path = f\"m/{self.REASON}'/0'/0'\"\n",
-    "        self.scan_path = f\"m/{self.REASON}'/1'/0'\"\n",
+    "        self.spend_path = \n",
+    "        self.scan_path = \n",
     "        self.scan_privkey, self.scan_pubkey = self.convert_to_bip340_key_pair(\n",
     "            self.get_scan_privkey()\n",
     "        )\n",
@@ -445,7 +434,7 @@
     "        return self.master.get_privkey_from_path(self.spend_path)\n",
     "    \n",
     "    def get_silent_payment_address(self):\n",
-    "        pubkeys = self.scan_pubkey.get_bytes() + self.spend_pubkey.get_bytes()\n",
+    "        pubkeys = \n",
     "        \n",
     "        data = convertbits(pubkeys, 8, 5)\n",
     "        return bech32_encode(\"sprt\", data, Encoding.BECH32M)"
