Multiply by generator

--- a/silent-payments-workshop.ipynb
+++ b/silent-payments-workshop.ipynb
@@ -18,7 +18,9 @@
     "def sha256(s):\n",
     "    if type(s) != bytes:\n",
     "        s = s.get_bytes()\n",
-    "    return hashlib.new('sha256', s).digest()"
+    "    return hashlib.new('sha256', s).digest()\n",
+    "\n",
+    "G = ECKey().set(1).get_pubkey()"
    ]
   },
   {
@@ -236,12 +238,12 @@
     "\n",
     "# sha256(outputpoint_hash * Sum of Bob's input privkeys * A)\n",
     "t = \n",
-    "T = ECKey().set(t).get_pubkey()\n",
+    "T = t * G\n",
     "D = T + A\n",
     "\n",
     "# alice\n",
     "t_prime = \n",
-    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
+    "T_prime = t_prime * G\n",
     "D_prime = T_prime + A\n",
     "\n",
     "assert D_prime == D"
@@ -295,13 +297,13 @@
     "\n",
     "# sha256(outpoint_hash * sum of bob's privkeys * Alice's scan public key)\n",
     "t = \n",
-    "T = ECKey().set(t).get_pubkey()\n",
+    "T = t * G\n",
     "# add to Alice's spend public key\n",
     "D = \n",
     "\n",
     "# alice\n",
     "t_prime = \n",
-    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
+    "T_prime = t_prime * G\n",
     "D_prime = \n",
     "\n",
     "assert D_prime == D"
@@ -364,12 +366,12 @@
     "\n",
     "outpoint_hash = sha256(txid1 + vout1 + txid2 + vout2)\n",
     "t = sha256(outpoint_hash * (b1 + b2) * A_scan)\n",
-    "T = ECKey().set(t).get_pubkey()\n",
+    "T = t * G\n",
     "D = \n",
     "\n",
     "# alice\n",
     "t_prime = sha256(outpoint_hash * a_scan * (B1 + B2))\n",
-    "T_prime = ECKey().set(t_prime).get_pubkey()\n",
+    "T_prime = t_prime * G\n",
     "\n",
     "D_prime = None\n",
     "for k,V in labels.items():\n",
@@ -414,7 +416,7 @@
     "        )\n",
     "        \n",
     "    def convert_to_bip340_key_pair(self, seckey):\n",
-    "        d = ECKey().set(seckey)\n",
+    "        d = seckey * G\n",
     "        P = d.get_pubkey()\n",
     "        if P.get_y() % 2 != 0:\n",
     "            d.negate()\n",
